# remedy

./: .gitignore  .pre-commit-config.yaml  README.md  example_config.json  pyproject.toml  resources.qrc  setup.py
remedy/: __init__.py  utils.py
remedy/gui/: __main__.py  app.py  highlights.py  hwr.py  qmetadata.py  thumbnail.py
remedy/gui/browser/: __init__.py  delegates.py  doctree.py  folderselect.py  info.py  search.py  workers.py
remedy/gui/export/: __init__.py  options.py  palette.py
remedy/gui/notebookview/: __init__.py  view.py
remedy/hwr/: mathpix.py
remedy/remarkable/: config.py  export.py  filesource.py  lines.py  metadata.py  palette.py  pdfbase.py  render.py
remy/: __init__.py  connect.py  utils.py
remy/gui/: __main__.py  app.py  highlights.py  hwr.py  qmetadata.py  thumbnail.py
remy/gui/browser/: __init__.py  delegates.py  doctree.py  info.py  search.py  workers.py
remy/gui/export/: __init__.py  options.py  palette.py
remy/gui/notebookview/: __init__.py  view.py
remy/hwr/: mathpix.py
remy/remarkable/: config.py  constants.py  export.py  filesource.py  lines.py  metadata.py  palette.py  pdfbase.py  render.py
src/remedy/: __init__.py  connect.py  utils.py
src/remedy/gui/: __main__.py  app.py  highlights.py  hwr.py  qmetadata.py  thumbnail.py
src/remedy/gui/browser/: __init__.py  delegates.py  doctree.py  folderselect.py  info.py  search.py  workers.py
src/remedy/gui/export/: __init__.py  options.py  palette.py
src/remedy/gui/notebookview/: __init__.py  view.py
src/remedy/hwr/: mathpix.py
src/remedy/remarkable/: config.py  constants.py  export.py  filesource.py  lines.py  metadata.py  palette.py  pdfbase.py  render.py
tests/units/: test_index.py
