[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Remedy"
dynamic = ["version"]
description = "Remedy, a reMarkable tablet manager app"
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.10"
authors = [
    { name = "Michael Mera", email = "dev@michaelmera.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "arrow",
    "paramiko",
    "PyPDF2<=1.28.4",
    "pyqt5",
    "requests",
    "sip",
]

[project.optional-dependencies]
default = [
    "pymupdf",
]
testing = [
    "pytest",
    "assertpy",
]
mupdf = [
    "pymupdf",
]
poppler = [
    "python-poppler-qt5",
]
simpl = [
    "simplification",
]

[project.scripts]
remedy = "remedy.gui.app:main"

[project.urls]
Homepage = "https://github.com/michaelmera/remedy"

[tool.hatch.version]
path = "src/remedy/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src/remedy",
    "/assets",
]

[tool.hatch.envs.units]
description = "Run unit tests"
env-include = [
    "PYTEST_*"
]
dependencies = [
    "pytest",
    "assertpy"
]

[[tool.hatch.envs.units.matrix]]
python = ["3.10", "3.11"]

[tool.hatch.envs.units.scripts]
all = "pytest tests/units"

[tool.black]
skip-string-normalization = true
target-version = ['py310','py311']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pylint."MESSAGES CONTROL"]
disable = "C0103,C0114,C0115,C0116,C0203,C0301,C0413"

[tool.pylint.format]
max-line-length="88"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = "tests/units"
norecursedirs = ["docs", "*.egg-info", ".git", ".tox", "__pycache__"]
